--- a/frontend/src/app/home/home.component.html
+++ b/frontend/src/app/home/home.component.html
@@ -13,6 +13,36 @@
         </button>
       </nav>
 
+      <div class="hf-home-subitems">
+        <button
+          *ngFor="let item of homeSubItems"
+          type="button"
+          class="hf-row hf-sub-row"
+          [class.active]="isItemActive(item)"
+          (click)="handleHomeSubItemClick(item)">
+          <fa-icon class="hf-icon" [icon]="item.icon"></fa-icon>
+          <span>{{item.label}}</span>
+        </button>
+      </div>
+
+      <hr class="hf-divider" />
+
+      <section class="hf-section">
+        <div class="hf-section-header">
+          <span>TOPICS</span>
+        </div>
+        <div class="hf-row hf-static-row">
+          <span>{{monthlyTopicLabel}}</span>
+        </div>
+        <button type="button" class="hf-row hf-action-row" (click)="goToCurrentTopic()">
+          <span>{{weeklyTopicLabel}}</span>
+        </button>
+        <button type="button" class="hf-row hf-action-row" (click)="goToTopicArchive()">
+          <fa-icon class="hf-icon" [icon]="faCompass"></fa-icon>
+          <span>Discover previous</span>
+        </button>
+      </section>
+
       <hr class="hf-divider" />
 
       <button type="button" class="hf-row hf-action-row" (click)="goToCreateSubreddit()">
@@ -35,17 +65,6 @@
           (click)="handleCommunityClick(item)">
           <fa-icon class="hf-icon" [icon]="item.icon"></fa-icon>
           <span>{{item.label}}</span>
-        </button>
-      </section>
-
-      <section class="hf-section">
-        <div class="hf-section-header">
-          <span>CUSTOM FEEDS</span>
-          <fa-icon [icon]="faChevronDown"></fa-icon>
-        </div>
-        <button type="button" class="hf-row">
-          <fa-icon class="hf-icon" [icon]="faPlus"></fa-icon>
-          <span>Create Custom Feed</span>
         </button>
       </section>
     </aside>
