--- a/frontend/src/app/header/header.component.css
+++ b/frontend/src/app/header/header.component.css
@@ -62,6 +62,11 @@
     cursor: pointer;
 }
 
+.secondary-link {
+    background: transparent;
+    color: var(--hf-text-secondary);
+}
+
 .create-link:hover,
 .create-link:focus {
     color: var(--hf-text);
