--- a/frontend/src/app/post/create-post/create-post.component.html
+++ b/frontend/src/app/post/create-post/create-post.component.html
@@ -61,9 +61,14 @@
               </div>
             </div>
 
-            <select class="form-control" style="margin-top: 10px" [formControlName]="'subredditName'">
-              <option *ngFor="let domain of domainOptions" [value]="domain.value">{{domain.label}}</option>
+            <select class="form-control" style="margin-top: 10px" [formControlName]="'communityId'" [disabled]="isLoadingCommunities || communityOptions.length === 0">
+              <option [ngValue]="null" disabled>Select a community</option>
+              <option *ngFor="let community of communityOptions" [ngValue]="community.id">{{community.name}}</option>
             </select>
+
+            <small *ngIf="communityOptions.length === 0 && !isLoadingCommunities" class="text-muted" style="display: block; margin-top: 6px;">
+              No communities are available yet. Create one from "Start a community" first.
+            </small>
 
             <editor [formControlName]="'description'" [init]="{
                         height: 500,
@@ -83,7 +88,7 @@
             <span>
               <div style="margin-top: 5px" class="float-right">
                 <button type="button" (click)="discardPost()" class="btnDiscard">Discard</button>
-                <button type="submit" class="btnCreatePost" [disabled]="isUploadingAttachment">Post</button>
+                <button type="submit" class="btnCreatePost" [disabled]="isUploadingAttachment || isLoadingCommunities || communityOptions.length === 0">Post</button>
               </div>
             </span>
           </div>
