--- a/frontend/src/app/subreddit/create-subreddit/create-subreddit.component.html
+++ b/frontend/src/app/subreddit/create-subreddit/create-subreddit.component.html
@@ -4,16 +4,32 @@
       <div class="create-subreddit-container">
         <form class="post-form" [formGroup]="createSubredditForm" (ngSubmit)="createSubreddit()">
           <div class="form-group">
-            <div class="create-subreddit-heading">Create Subreddit</div>
+            <div class="create-subreddit-heading">Create Community</div>
             <hr />
-            <input type="text" [formControlName]="'title'" class="form-control" style="margin-top: 5px"
-              placeholder="Title">
-            <textarea type="text" [formControlName]="'description'" style="width: 100%; margin-top: 5px"
+
+            <input
+              type="text"
+              [formControlName]="'title'"
+              class="form-control"
+              style="margin-top: 5px"
+              placeholder="Community Name">
+
+            <textarea
+              [formControlName]="'description'"
+              style="width: 100%; margin-top: 5px"
               placeholder="Description"></textarea>
+
+            <input
+              type="text"
+              [formControlName]="'headerImageUrl'"
+              class="form-control"
+              style="margin-top: 5px"
+              placeholder="Header image URL (optional)">
+
             <div>
               <div style="margin-top: 5px" class="float-right">
-                <button (click)="discard()" class="btnDiscard">Discard</button>
-                <button class="btnCreateSubreddit">Create</button>
+                <button type="button" (click)="discard()" class="btnDiscard">Discard</button>
+                <button type="submit" class="btnCreateSubreddit">Create</button>
               </div>
             </div>
           </div>
