--- a/frontend/src/app/topics/topic-discussion.component.html
+++ b/frontend/src/app/topics/topic-discussion.component.html
@@ -88,6 +88,7 @@
             [topicId]="topic.id"
             [comments]="unifiedComments"
             [isLoggedIn]="isLoggedIn"
+            [currentUsername]="currentUsername"
             (threadUpdated)="onThreadUpdated()">
           </app-topic-comment-thread>
         </section>
