Add My Comments page in app shell with topic-comment management

--- a/frontend/src/app/header/header.component.html
+++ b/frontend/src/app/header/header.component.html
@@ -27,6 +27,7 @@
                     <div ngbDropdownMenu aria-labelledby="dropdownBasic1">
                         <button (click)="goToMyPosts()" ngbDropdownItem>My Posts</button>
                         <button (click)="goToMyLikes()" ngbDropdownItem>My Likes</button>
+                        <button (click)="goToMyComments()" ngbDropdownItem>My Comments</button>
                         <button (click)="goToUserProfile()" ngbDropdownItem>My Profile</button>
                         <button (click)="logout()" ngbDropdownItem>Logout</button>
                     </div>
