--- a/frontend/src/app/shared/hf-sidebar/hf-sidebar.component.html
+++ b/frontend/src/app/shared/hf-sidebar/hf-sidebar.component.html
@@ -48,6 +48,11 @@
     <span>Start a community</span>
   </button>
 
+  <button type="button" class="hf-row hf-action-row" (click)="goToMyComments()">
+    <fa-icon class="hf-icon" [icon]="faComments"></fa-icon>
+    <span>My comments</span>
+  </button>
+
   <hr class="hf-divider" />
 
   <section class="hf-section">
